@@ -28,6 +28,7 @@
 
 package org.imixs.workflow;
 
+import java.lang.reflect.InvocationTargetException;
 import java.math.BigInteger;
 import java.security.SecureRandom;
 import java.text.SimpleDateFormat;
@@ -216,16 +217,16 @@ public class WorkflowKernel {
             Class<?> clazz = null;
             try {
                 clazz = Class.forName(pluginClass);
-                Plugin plugin = (Plugin) clazz.newInstance();
+
+                // deprecated since java9 clazz.getDeclaredConstructor().newInstance()
+                // Plugin plugin = (Plugin) clazz.newInstance();
+
+                Plugin plugin = (Plugin) clazz.getDeclaredConstructor().newInstance();
+
                 registerPlugin(plugin);
 
-            } catch (ClassNotFoundException e) {
-                throw new PluginException(WorkflowKernel.class.getSimpleName(), PLUGIN_NOT_CREATEABLE,
-                        "unable to register plugin: " + pluginClass + " - reason: " + e.toString(), e);
-            } catch (InstantiationException e) {
-                throw new PluginException(WorkflowKernel.class.getSimpleName(), PLUGIN_NOT_CREATEABLE,
-                        "unable to register plugin: " + pluginClass + " - reason: " + e.toString(), e);
-            } catch (IllegalAccessException e) {
+            } catch (ClassNotFoundException | NoSuchMethodException | SecurityException | InstantiationException
+                    | IllegalAccessException | IllegalArgumentException | InvocationTargetException e) {
                 throw new PluginException(WorkflowKernel.class.getSimpleName(), PLUGIN_NOT_CREATEABLE,
                         "unable to register plugin: " + pluginClass + " - reason: " + e.toString(), e);
             }
@@ -700,9 +701,10 @@ public class WorkflowKernel {
      * @param documentResult
      * @param event
      * @throws PluginException
-     * @throws ModelException 
+     * @throws ModelException
      */
-    private void executeSignalAdapters(ItemCollection documentResult, ItemCollection event) throws PluginException, ModelException {
+    private void executeSignalAdapters(ItemCollection documentResult, ItemCollection event)
+            throws PluginException, ModelException {
         boolean debug = logger.isLoggable(Level.FINE);
         if (debug) {
             logger.finest("......executing SignalAdapters...");
@@ -714,8 +716,8 @@ public class WorkflowKernel {
             if (adapter != null) {
 
                 if (adapter instanceof GenericAdapter) {
-                    logger.warning(
-                            "...GenericAdapter '" + adapterClass + "' should not be associated with a Signal Event. Adapter will not be executed.");
+                    logger.warning("...GenericAdapter '" + adapterClass
+                            + "' should not be associated with a Signal Event. Adapter will not be executed.");
                     // ...stop execution as the GenericAdapter was already executed by the method
                     // executeGenericAdapters...
                 } else {
@@ -729,8 +731,9 @@ public class WorkflowKernel {
 
                     }
                 }
-            } else {                
-                throw new ModelException(ModelException.INVALID_MODEL, "...Adapter '" + adapterClass + "' not registered - verify model!");
+            } else {
+                throw new ModelException(ModelException.INVALID_MODEL,
+                        "...Adapter '" + adapterClass + "' not registered - verify model!");
             }
         }
     }
@@ -741,7 +744,7 @@ public class WorkflowKernel {
      * 
      * @param documentResult
      * @param event
-     * @throws PluginException 
+     * @throws PluginException
      */
     private void executeGenericAdapters(ItemCollection documentResult, ItemCollection event) throws PluginException {
         boolean debug = logger.isLoggable(Level.FINE);
@@ -768,7 +771,7 @@ public class WorkflowKernel {
      * @param adapter
      * @param workitem
      * @param event
-     * @throws PluginException 
+     * @throws PluginException
      */
     private void executeAdaper(Adapter adapter, ItemCollection workitem, ItemCollection event) throws PluginException {
         boolean debug = logger.isLoggable(Level.FINE);
