@@ -7,9 +7,9 @@ import java.util.Hashtable;
 import java.util.List;
 import java.util.Map;
 
-import javax.xml.bind.JAXBContext;
-import javax.xml.bind.JAXBException;
-import javax.xml.bind.Marshaller;
+import jakarta.xml.bind.JAXBContext;
+import jakarta.xml.bind.JAXBException;
+import jakarta.xml.bind.Marshaller;
 
 import org.imixs.workflow.FileData;
 import org.imixs.workflow.ItemCollection;
@@ -240,7 +240,7 @@ public class TestXMLItem {
 		xmlItem.setName("maps");
 
 		Date date = new Date();
-		Double _double1=new Double(1.47);
+		Double _double1= Double.valueOf(1.47);
 		
 		
 		List<Map<String, Object>> commentList = new ArrayList<>();
